--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -3,6 +3,13 @@
     background: linear-gradient(90deg, #f6b1ff,#4b7bff);
     padding:0.5rem;
 }
+.ion-page{
+  width: 0;
+  height: 0;
+}
+.texto-bienvenido{
+  text-align: center;
+}
 .monto,.concepto{
     width:50%;
 }
