--- a/src/app/tab-arduino/tab-arduino.page.html
+++ b/src/app/tab-arduino/tab-arduino.page.html
@@ -25,13 +25,21 @@
 
 <ion-content [fullscreen]="true">
   <div class="contenido">
-    <div class="ion-page" id="main-content">
-      <ion-menu-toggle>
-        <ion-button (click)="abrirMenu()"><ion-icon name="menu"></ion-icon></ion-button>
-      </ion-menu-toggle>
-    </div>
-    <br>
-    <br>
+    <ion-header>
+      <ion-toolbar style="display: flex;background-color: #1D84B5;">
+          <ion-buttons slot="end">
+            <ion-menu-toggle>
+              <ion-button (click)="abrirMenu()"><ion-icon name="menu"></ion-icon></ion-button>
+            </ion-menu-toggle>
+          </ion-buttons>
+          <ion-title width="60%"><h3 style="color: #EEF4ED;">Mi carrito de compras</h3></ion-title>
+          <ion-buttons slot="start">
+            <ion-menu-toggle>
+              <ion-button (click)="redirectToTab1WithTabs('tab1-with-tabs')"><ion-icon name="return-up-back-outline"></ion-icon></ion-button>
+            </ion-menu-toggle>
+          </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
     <div class="titulo compras">
       <h1>Productos ARDUINO</h1>
     </div>
