--- a/src/app/tab-arduino/tab-arduino.page.scss
+++ b/src/app/tab-arduino/tab-arduino.page.scss
@@ -1,3 +1,9 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+*{
+    font-family: 'Titillium Web', sans-serif;
+}
+
 .card{
     width:40%;
     background-color: #13315C;
