--- a/src/app/tab-home/tab-home.page.scss
+++ b/src/app/tab-home/tab-home.page.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+*{
+    font-family: 'Titillium Web', sans-serif;
+}
 .body {
     background: linear-gradient(180deg, #5B7FFF 0%, rgba(152, 181, 255, 0.00) 100%);
     padding: 1rem;
