--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+*{
+    font-family: 'Titillium Web', sans-serif;
+}
+
 .cuerpo{
     width: 100%;
-    height: 100%;
     background-color: #EEF4ED;
-    padding:0.5rem;
 }
 .ion-page{
   width: 0;
@@ -29,6 +32,7 @@
     background-color:#13315C;
     border: 1px #000000;
     padding:0.5rem;
+    margin:0.5rem;
 }
 .miCarrito {
     
