--- a/src/app/tab-arduino/tab-arduino.page.html
+++ b/src/app/tab-arduino/tab-arduino.page.html
@@ -26,7 +26,7 @@
 <ion-content [fullscreen]="true">
   <div class="contenido">
     <ion-header>
-      <ion-toolbar style="display: flex;background-color: #1D84B5;">
+      <ion-toolbar style="display: flex;background-color: #1D84B5; position: fixed;">
           <ion-buttons slot="end">
             <ion-menu-toggle>
               <ion-button (click)="abrirMenu()"><ion-icon name="menu"></ion-icon></ion-button>
@@ -40,6 +40,8 @@
           </ion-buttons>
       </ion-toolbar>
     </ion-header>
+    <br>
+  <br>
     <div class="titulo compras">
       <h1>Productos ARDUINO</h1>
     </div>
