--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -27,7 +27,7 @@
   
   <div class="cuerpo">
     <ion-header>
-      <ion-toolbar style="display: flex;background-color: #1D84B5;">
+      <ion-toolbar style="display: flex;background-color: #1D84B5; position: fixed;">
           <ion-buttons slot="end">
             <ion-menu-toggle>
               <ion-button (click)="abrirMenu()"><ion-icon name="menu"></ion-icon></ion-button>
@@ -41,6 +41,8 @@
           </ion-buttons>
       </ion-toolbar>
     </ion-header>
+    <br>
+  <br>
     <h1 class="texto-bienvenido" style="color: black;"><b><em>¡Bienvenido!</em></b></h1>
     <div class="acceRap">
       <h1 style="width: 100%;" class="tituloCat">Menú Principal</h1>
