--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -25,7 +25,7 @@
 
 <ion-content [fullscreen]="true" class="menu" id="main-content">
   <ion-header>
-    <ion-toolbar style="display: flex;background-color: #1D84B5;">
+    <ion-toolbar style="display: flex;background-color: #1D84B5;position: fixed;">
         <ion-buttons slot="end">
           <ion-menu-toggle>
             <ion-button (click)="abrirMenu()"><ion-icon name="menu"></ion-icon></ion-button>
@@ -39,6 +39,8 @@
         </ion-buttons>
     </ion-toolbar>
   </ion-header>
+  <br>
+  <br>
   <div class="contenidoall">
     
     <div class="cuerpo">
